-Show all registers on Debug CPU window
-Support ZSF snapshots

Improved TBBlue emulation:
-Added emulation of tbblue joystick type (register 5)
-Added sprite zoom emulation
-Added relative sprites emulation
-Added sprite clipping emulation

Improved ZX Desktop: 
-Added direct buttons, to access menu items
-Added devices buttons/icons, to show device activity and device configuration
-Reordered menu items
-Windows are not closed when changing ZX Desktop size
-Added new ZX Desktop fill types: RainbowAlive, Chess, Grid, Random
-Improved input number windows: added buttons to increase/decrease values
-Now backgrounded windows can be seen even with menu closed (added a setting and also a F-key)

Improved ZRCP: 
-Added MMU information to cpu-history and get-registers commands
-Added ZRCP command qdos-get-open-files: to get open files from QL QDOS

Improved debugging:
-Added debug console as a menu window
-Added MMU information when viewing cpu registers on terminal console

Improved Waveform window: Now can show left & right channels
Improved 1 bit resample audio filter
Improved loading .pok files: increased maximum pokes from 100 to 49152 pokes
Improved File Browser: added previews for screens (on .scr, .tap, .tzx, .pzx, .trd, .dsk, .sna, .sp, .z80, .p, .zsf)
Improved ZENG: Added setting to reconnect after retry failed sending


Fixed QL bugs:
-Fixed loading QL Superbasic programs when line lenght usually longer than 128 bytes
-Fixed loading executable files, can even exec/exec_w files without QDOS header
-Fixed system calls FS.SAVE, FS.HEADS, FS.HEADR, IO.FSTRG, IO.EDLIN, IO.FCLOSE, IO.DELET
-Fixed possible hang calling IO.SSTRG
-Fixed using QL system calls and A6 pointer offset used after previous Trap was not 4
-Fixed RTC emulation
-Fixed frame interrupt
-Fixed cursor flashing
-Fixed listing (dir) call
-Fixed reading keyboard when menu open

Fixed reading keys on SDL and X11 drivers with default keymap and machines QL, MSX and Spectravideo